WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
194964
[iOS] Break a reference cycle between PreviewLoader and ResourceLoader
https://bugs.webkit.org/show_bug.cgi?id=194964
Summary
[iOS] Break a reference cycle between PreviewLoader and ResourceLoader
Andy Estes
Reported
2019-02-22 15:59:24 PST
[iOS] Break a reference cycle between PreviewLoader and ResourceLoader
Attachments
Patch
(1.66 KB, patch)
2019-02-22 16:04 PST
,
Andy Estes
no flags
Details
Formatted Diff
Diff
Patch
(9.12 KB, patch)
2019-03-25 14:40 PDT
,
Andy Estes
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Andy Estes
Comment 1
2019-02-22 16:00:24 PST
rdar://problem/48279441
Andy Estes
Comment 2
2019-02-22 16:04:27 PST
Created
attachment 362776
[details]
Patch
WebKit Commit Bot
Comment 3
2019-02-22 16:42:04 PST
Comment on
attachment 362776
[details]
Patch Clearing flags on attachment: 362776 Committed
r241970
: <
https://trac.webkit.org/changeset/241970
>
WebKit Commit Bot
Comment 4
2019-02-22 16:42:06 PST
All reviewed patches have been landed. Closing bug.
Truitt Savell
Comment 5
2019-02-26 11:08:11 PST
The change in
https://trac.webkit.org/changeset/241970/webkit
caused the API test QuickLook.LegacyQuickLookContent to become flakey on iOS simulator. log:
https://build.webkit.org/builders/Apple%20iOS%2012%20Simulator%20Release%20WK2%20%28Tests%29/builds/2832/steps/run-api-tests/logs/stdio
Failed TestWebKitAPI.QuickLook.LegacyQuickLookContent /Volumes/Data/slave/ios-simulator-12-release/build/Tools/TestWebKitAPI/Tests/WebKitCocoa/QuickLook.mm:221 Value of: [[NSFileManager defaultManager] fileExistsAtPath:filePath] Actual: false Expected: true /Volumes/Data/slave/ios-simulator-12-release/build/Tools/TestWebKitAPI/Tests/WebKitCocoa/QuickLook.mm:226 Expected equality of these values: expectedFileSize Which is: 274143 [fileAttributes[NSFileSize] unsignedIntegerValue] Which is: 0 reproduced with command: run-api-tests QuickLook.LegacyQuickLookContent --ios-simulator the test will fail intermittently on
r241970
but did not fail at all on
r241969
WebKit Commit Bot
Comment 6
2019-02-26 11:20:09 PST
Re-opened since this is blocked by
bug 195057
Andy Estes
Comment 7
2019-03-25 14:40:30 PDT
Created
attachment 365902
[details]
Patch
WebKit Commit Bot
Comment 8
2019-03-25 16:30:52 PDT
Comment on
attachment 365902
[details]
Patch Clearing flags on attachment: 365902 Committed
r243471
: <
https://trac.webkit.org/changeset/243471
>
WebKit Commit Bot
Comment 9
2019-03-25 16:30:54 PDT
All reviewed patches have been landed. Closing bug.
Fujii Hironori
Comment 10
2019-03-25 18:20:24 PDT
Committed
r243476
: <
https://trac.webkit.org/changeset/243476
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug