[iOS] Break a reference cycle between PreviewLoader and ResourceLoader https://bugs.webkit.org/show_bug.cgi?id=194964 <rdar://problem/48279441>

Reviewed by Alex Christensen.

When a document's QuickLook preview is loaded, a reference cycle is created between
PreviewLoader and ResourceLoader. Break the cycle by clearing m_previewLoader in
ResourceLoader::releaseResources().

Fixes leaks detected by `run-webkit-tests --leaks LayoutTests/quicklook`.

* loader/ResourceLoader.cpp:
(WebCore::ResourceLoader::releaseResources):


Canonical link: https://commits.webkit.org/209322@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@241970 268f45cc-cd09-0410-ab3c-d52691b4dbfc